--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,48 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 
-body{
-    background: #edf3f8;
-    font-family: 'Poppins', sans-serif;
-}
-
-.container{
-    @apply w-[80%] mx-auto bg-white relative px-8 rounded-[36px] border-gray-200 shadow border space-y-8 pt-10 pb-24 
-}
-.container-child{
-    @apply flex justify-center items-center gap-5 text-sm  bg-[#F5F5F5] absolute bottom-0 left-0 py-5 w-full rounded-bl-[36px] rounded-br-[36px] border-gray-200 shadow border
-}
-.container-top{
-    @apply p-4 w-[80%] rounded-full border border-gray-200 bg-white absolute -top-5 left-[10%]
+body {
+  background: #edf3f8;
+  font-family: "Poppins", sans-serif;
 }
 
-.bg-1{
-@apply  bg-gradient-to-r from-[#E38364] to-[#e0725a]
+.bg-1 {
+  @apply bg-gradient-to-r from-[#E38364] to-[#e0725a];
 }
-.bg-2{
-@apply  bg-gradient-to-r from-[#8C7FDD] to-[#6F5ED8]
+.bg-2 {
+  @apply bg-gradient-to-r from-[#8C7FDD] to-[#6F5ED8];
 }
-.bg-3{
-@apply  bg-gradient-to-r from-[#FCA43E] to-[#EAB124]
+.bg-3 {
+  @apply bg-gradient-to-r from-[#FCA43E] to-[#EAB124];
 }
-.bg-4{
-@apply  bg-gradient-to-r to-[#C44A8C] from-[#E06DAB]
+.bg-4 {
+  @apply bg-gradient-to-r to-[#C44A8C] from-[#E06DAB];
 }
-.bg-5{
-@apply  bg-gradient-to-r from-[#4FC47E] to-[#6ED999]
+.bg-5 {
+  @apply bg-gradient-to-r from-[#4FC47E] to-[#6ED999];
 }
-.bg-6{
-@apply  bg-gradient-to-r from-[#86B93C] to-[#97C159]
+.bg-6 {
+  @apply bg-gradient-to-r from-[#86B93C] to-[#97C159];
 }
-.bg-7{
-@apply  bg-gradient-to-r from-[#5094BB] to-[#63AED9]
+.bg-7 {
+  @apply bg-gradient-to-r from-[#5094BB] to-[#63AED9];
 }
-.bg-8{
-@apply  bg-gradient-to-r from-[#3CC1B1] to-[#13D1BA]
+.bg-8 {
+  @apply bg-gradient-to-r from-[#3CC1B1] to-[#13D1BA];
+}
+
+.container {
+  @apply w-[80%] mx-auto bg-white relative px-8 rounded-[36px] border-gray-200 shadow border  pt-16 pb-24;
+}
+.container-child {
+  @apply flex justify-center items-center gap-5 text-sm  bg-[#F5F5F5] absolute bottom-0 left-0 py-5 w-full rounded-bl-[36px] rounded-br-[36px] border-gray-200 shadow border;
+}
+.container-top {
+  @apply p-4 w-[80%] rounded-full border border-gray-200 bg-white absolute -top-5 left-[10%];
+}
+
+.section{
+@apply  h-[100px] px-4  rounded-[25px] cursor-pointer flex justify-start items-center w-full 
 }
